# hpc_learning

./: CMakeLists.txt  README.md
docs/: CUDA调优-reduce.md  CUDA调优-合并访存.md
include/ops/: fuse_softmax.h  reduce.h  vector_add.cuh  vector_add.h
src/ops/cuda/: a.out  fuse_softmax.cu  reduce.cu  vector_add  vector_add.cu
src/ops/triton/: test.py  vector_add.py  vector_add_profile.ncu-rep
tests/ops/cuda/: reduce_profile.cu  vector_add_profile.cu  vector_add_test.cu
